fixed width on small devices

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h1, p {
 
 
 form {
-    width: 700px;
+    max-width: 700px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(255,255,255,.7);
